# Reverse-Twiter-Chat--Grok-basedMultiagent_TSD-250926

./: .gitmodules  README.md  docker-compose.yml
tsd/: .gitignore  README.md  config.py  cpp_migration_plan.md  expanded_nanogpt_vs_csp_250924_0924.md  microkernel_comparison.md  nanogpt_vs_csp_comparison.md  pyproject.toml  requirements.txt  test_csp.py
tsd/archive/: old_external_order_update_publisher.py  old_order_book_input_adapter.py  v1_csp_orderbook_subscriber.py  v1_messaging.py  v1_nat_orderbook_adapter.py  v1_nats_market_data_publisher.py  v1_new_order_book_adapter.py  v1_nng_market_data_input_adapter.py  v1_nng_market_data_publisher.py  v1_nng_order_update_data_input_adapter.py  v1_nng_order_update_publisher.py  v1_order_book_adapter.py  v1_orderbook_publisher.py  v1_orderbook_subscriber.py  v1_position_adapter.py  v1_tcp_orderbook_subscriber.py  v1_tcp_publisher.py  v1_udp_orderbook_publisher.py  v1_udp_publisher.py  v2_order_book_adapter.py  v2_order_book_publisher.py  v3_external_order_update_input_adapter.py  v3_external_order_update_publisher.py  v3_order_book_input_adapter.py  v3_order_book_publisher.py  v4_external_order_update_pub.py  v4_order_book_pub.py  v4_position_pub.py  v4_streaming.py
tsd/archive/node/: math.py  trade.py
tsd/config/: __init__.py  auth_config.py  portfolio_config.py  routing_config.py  test_config.py
tsd/core/constants/: spot.py
tsd/core/types/: exchange.py  instrument.py  marketdata.py  position.py  trade.py
tsd/docs/: quickstart_influxdb.ipynb  set_influxdb.md  set_nas.md
tsd/dsm/: README.md  quickstart_timescaledb.ipynb
tsd/dsm/core/: pubsub_base.py
tsd/dsm/publisher/: execution_report_publisher.py  order_book_publisher.py  position_publisher.py
tsd/dsm/recorder/: order_book_recorder.py
tsd/dsm/subscriber/: execution_report_subscriber.py  order_book_subscriber.py
tsd/dsm/utils/: conversion_utils.py
tsd/osm/: README.md  __init__.py  example.py  order_service_manager.py
tsd/osm/core/: base.py
tsd/osm/core/archive/: publisher.py
tsd/osm/managers/: binance.py  bybit.py  coinbase.py  okx.py
tsd/osm/managers/type/: binanceOrder.py  bybitOrder.py  okxOrder.py  (+1 more)
tsd/osm/tests/: README.md  test_order_flow.py
tsd/osm/utils/: auth.py  clientIdGen.py  latency.py  request_id.py
tsd/tsd_cpp/: CMakeLists.txt  Makefile  README.md  build.bat  test_compilation.cpp
tsd/tsd_cpp/examples/: basic_example.cpp  complete_trading_system.cpp  trading_example.cpp
tsd/tsm/: README.md
tsd/tsm/training/: Overall.md
(+177 files in other folders)
